--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           playing the game.
         
         <p>Thank You For Visiting Us:-</p>
-         FOR SOURCE CODE PLESE CLICK ,<a href="https://www.github.com/SimranTiwari18">HERE.</a>
+         FOR SOURCE CODE PLESE CLICK ,<a href="https://github.com/SimranTiwari18/jsgames">HERE.</a>
          <hr/>
          <p class="footer">&copy;2021,All Rights Resereved <a href="https://www.instagram.com/sim_s_1203">@simran tiwari </a></p>
     </pre>
