--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script>
+        alert(" this web-game is strictly recommended for pc not for mobile");
+        </script>
 <div class="body">
     <div id="sc">
     <div id="scorebox">SCORE: 0 </div>
